FIX: Making form responsive on mobile devices

--- a/style/form-style.css
+++ b/style/form-style.css
@@ -26,11 +26,11 @@ html {
   height: 100vh;
 }
 
-.container {
+/* .container {
   display: flex;
   flex: 1;
   justify-content: space-between;
-}
+} */
 
 .left {
   background: #fffcf8;
@@ -214,4 +214,23 @@ form {
   justify-content: flex-end;
   align-items: flex-start;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 797px) {
+  .overall-section {
+    display: block;
+  }
+  .left,
+  .right {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  form {
+    display: block;
+  }
+  .form-group {
+    width: 100%;
+  }
 }
